--- a/notebooks/python.ipynb
+++ b/notebooks/python.ipynb
@@ -201,8 +201,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bb06a306-6e25-4bd6-a64c-6f5e12df5b33",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-05T07:41:23.946200Z",
+     "iopub.status.busy": "2022-12-05T07:41:23.945863Z",
+     "iopub.status.idle": "2022-12-05T07:41:23.961937Z",
+     "shell.execute_reply": "2022-12-05T07:41:23.961231Z",
+     "shell.execute_reply.started": "2022-12-05T07:41:23.946175Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer 1: ZWHVFWQWW\n",
+      "Answer 2: HZFZCCWWV\n"
+     ]
+    }
+   ],
+   "source": [
+    "def parse_crates(lines):\n",
+    "    w = int((len(lines[0]) + 1)/4)\n",
+    "    h = len(lines)\n",
+    "    tops = [0] * w\n",
+    "    crates = []\n",
+    "    for j in range(h):\n",
+    "        line = lines[j]\n",
+    "        cline = [' '] * w\n",
+    "        for i in range(w):\n",
+    "            c = line[1 + i * 4]\n",
+    "            cline[i] = c\n",
+    "            if c == ' ':\n",
+    "                tops[i] += 1        \n",
+    "        crates.append(cline)\n",
+    "    crates.reverse()\n",
+    "    for i in range(w):\n",
+    "        tops[i] = h - tops[i]\n",
+    "    return crates, tops\n",
+    "\n",
+    "def parse_moves(lines):\n",
+    "    def parse_move(line):\n",
+    "        parts = line.split()\n",
+    "        return [int(parts[1]), int(parts[3]), int(parts[5])]\n",
+    "    return [parse_move(line) for line in lines]\n",
+    "\n",
+    "def apply_move(crates, tops, m, reverse):\n",
+    "    (n, src, dst) = m\n",
+    "    src -= 1\n",
+    "    dst -= 1\n",
+    "    w = len(tops)\n",
+    "    ts = tops[src]\n",
+    "    td = tops[dst]\n",
+    "    for i in range(n):\n",
+    "        ps = ts - i - 1\n",
+    "        pd = td + i if reverse else td + n - i - 1\n",
+    "        while len(crates) <= pd:\n",
+    "            crates.append([' '] * w)\n",
+    "        crates[pd][dst] = crates[ps][src]\n",
+    "        crates[ps][src] = ' '\n",
+    "    tops[src] -= n\n",
+    "    tops[dst] += n\n",
+    "        \n",
+    "def eval_crates(data, reverse):\n",
+    "    parts = [s.split(\"\\n\") for s in data.split(\"\\n\\n\")]\n",
+    "    crates, tops = parse_crates(parts[0][:-1])\n",
+    "    moves = parse_moves(parts[1])\n",
+    "    for m in moves:\n",
+    "        apply_move(crates, tops, m, reverse)\n",
+    "\n",
+    "    return ''.join(crates[tops[i] - 1][i] for i in range(len(tops)))\n",
+    "\n",
+    "data = open(\"../data/05.txt\").read()\n",
+    "\n",
+    "res1, res2 = [eval_crates(data, r) for r in [True, False]]\n",
+    "print(f'Answer 1: {res1}\\nAnswer 2: {res2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bebf4398-1de7-4f17-92ac-f853f3274095",
    "metadata": {},
    "outputs": [],
    "source": []
