--- a/notebooks/python.ipynb
+++ b/notebooks/python.ipynb
@@ -201,15 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "bb06a306-6e25-4bd6-a64c-6f5e12df5b33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-05T07:41:23.946200Z",
-     "iopub.status.busy": "2022-12-05T07:41:23.945863Z",
-     "iopub.status.idle": "2022-12-05T07:41:23.961937Z",
-     "shell.execute_reply": "2022-12-05T07:41:23.961231Z",
-     "shell.execute_reply.started": "2022-12-05T07:41:23.946175Z"
+     "iopub.execute_input": "2022-12-05T20:22:51.550649Z",
+     "iopub.status.busy": "2022-12-05T20:22:51.539186Z",
+     "iopub.status.idle": "2022-12-05T20:22:51.658161Z",
+     "shell.execute_reply": "2022-12-05T20:22:51.657599Z",
+     "shell.execute_reply.started": "2022-12-05T20:22:51.540045Z"
     },
     "tags": []
    },
@@ -224,6 +224,7 @@
     }
    ],
    "source": [
+    "# DAY05\n",
     "def parse_crates(lines):\n",
     "    w = int((len(lines[0]) + 1)/4)\n",
     "    h = len(lines)\n",
@@ -306,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
