--- a/notebooks/rust.ipynb
+++ b/notebooks/rust.ipynb
@@ -2,25 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d453ae06-6ef2-4c3e-b900-3791205730fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T10:44:33.392066Z",
-     "iopub.status.busy": "2022-12-02T10:44:33.391744Z",
-     "iopub.status.idle": "2022-12-02T10:44:33.391820Z",
-     "shell.execute_reply": "2022-12-02T10:44:33.939407Z"
+     "iopub.execute_input": "2022-12-05T11:31:17.073820Z",
+     "iopub.status.busy": "2022-12-05T11:31:17.073673Z",
+     "iopub.status.idle": "2022-12-05T11:31:17.073733Z",
+     "shell.execute_reply": "2022-12-05T11:31:17.710544Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
     "// SETUP\n",
+    "use std::fs;\n",
     "use std::fs::File;\n",
     "use std::collections::{HashMap, HashSet};\n",
     "use std::str::FromStr;\n",
     "use std::io::{BufRead, BufReader, Error, ErrorKind, Read};\n",
     "use std::time::Instant;\n",
+    "\n",
+    "fn read_string(path: &str) -> Result<String, Error> {\n",
+    "    let data = fs::read_to_string(path)?;\n",
+    "    Ok(data)\n",
+    "}\n",
     "\n",
     "fn read_lines(path: &str) -> Result<Vec<String>, Error> {\n",
     "    let file = File::open(path)?; \n",
@@ -334,6 +340,7 @@
     }
    ],
    "source": [
+    "// DAY04\n",
     "#[macro_use] extern crate lazy_static;\n",
     "extern crate regex;\n",
     "use regex::Regex;\n",
@@ -376,8 +383,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "53e6b819-2891-483a-a9fd-975acbc4bff4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-05T20:14:40.542312Z",
+     "iopub.status.busy": "2022-12-05T20:14:40.542155Z",
+     "iopub.status.idle": "2022-12-05T20:14:40.542231Z",
+     "shell.execute_reply": "2022-12-05T20:14:41.435792Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer 1: ZWHVFWQWW, Answer 2: HZFZCCWWV\n"
+     ]
+    }
+   ],
+   "source": [
+    "// DAY05\n",
+    "#[derive(Debug, PartialEq, Copy, Clone)]\n",
+    "struct CratesMove {\n",
+    "    src: usize,\n",
+    "    dst: usize,\n",
+    "    num: usize,\n",
+    "}\n",
+    "\n",
+    "impl FromStr for CratesMove {\n",
+    "    type Err = std::num::ParseIntError;\n",
+    "    fn from_str(s: &str) -> Result<Self, Self::Err> {\n",
+    "        let parts: Vec<&str> = s.split(\" \").collect();\n",
+    "        Ok(CratesMove {\n",
+    "            src: parts[3].parse()?,\n",
+    "            dst: parts[5].parse()?,\n",
+    "            num: parts[1].parse()?,\n",
+    "        })\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "#[derive(Debug, PartialEq, Clone)]\n",
+    "struct CratesField {\n",
+    "    crates: Vec<Vec<char>>,\n",
+    "    tops: Vec<usize>,\n",
+    "}\n",
+    "\n",
+    "impl CratesField {\n",
+    "    fn apply_move(&mut self, mv: &CratesMove, reverse: bool) {\n",
+    "        let src = mv.src - 1;\n",
+    "        let dst = mv.dst - 1;\n",
+    "        let w = self.crates[0].len();\n",
+    "        let ts = self.tops[src];\n",
+    "        let td = self.tops[dst];\n",
+    "        for i in 0..mv.num {\n",
+    "            let ps = ts - i - 1;\n",
+    "            let pd = if reverse {td + i} else {td + mv.num - i - 1};\n",
+    "            while self.crates.len() <= pd {\n",
+    "                self.crates.push(vec![' '; w]);\n",
+    "            }\n",
+    "            self.crates[pd][dst] = self.crates[ps][src];\n",
+    "            self.crates[ps][src] = ' ';\n",
+    "        }\n",
+    "        self.tops[src] -= mv.num;\n",
+    "        self.tops[dst] += mv.num;\n",
+    "    }\n",
+    "    \n",
+    "    fn get_top(self) -> String {\n",
+    "        self.tops.iter().enumerate().map(|(i, t)| self.crates[t - 1][i]).collect()\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fn parse_crates(lines: &Vec<&str>) -> CratesField {\n",
+    "    let h = lines.len() - 1;\n",
+    "    let w = (lines[0].len() + 1) / 4;\n",
+    "    let mut crates = vec![vec![' '; w]; h];\n",
+    "    let mut tops = vec![0; w];\n",
+    "    for j in 0..h {\n",
+    "        let line: Vec<_> = lines[j].chars().collect();\n",
+    "        for i in 0..w {\n",
+    "            let c = line[1 + i * 4];\n",
+    "            crates[j][i] = c;\n",
+    "            if c == ' ' {\n",
+    "                tops[i] += 1;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    crates.reverse();\n",
+    "    for i in 0..w {\n",
+    "        tops[i] = h - tops[i];\n",
+    "    }\n",
+    "    CratesField {\n",
+    "        crates: crates,\n",
+    "        tops: tops,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fn problem05() {  \n",
+    "    let data = read_string(&data_file(5)).unwrap();\n",
+    "    let parts: Vec<Vec<&str>> = data.split(\"\\n\\n\").map(|s| s.split(\"\\n\").collect()).collect();\n",
+    "    let moves: Vec<CratesMove> = parts[1].iter().map(|s| s.parse().unwrap()).collect();\n",
+    "    \n",
+    "    let mut field1 = parse_crates(&parts[0]);\n",
+    "    let mut field2 = field1.clone();\n",
+    "    for m in &moves {\n",
+    "        &field1.apply_move(&m, true);\n",
+    "    }\n",
+    "    let res1 = &field1.get_top();\n",
+    "\n",
+    "    for m in &moves {\n",
+    "        field2.apply_move(&m, false);\n",
+    "    }\n",
+    "    let res2 = &field2.get_top();\n",
+    "    println!(\"Answer 1: {}, Answer 2: {}\", res1, res2);\n",
+    "}\n",
+    "\n",
+    "problem05();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e6927c-1213-43fd-9761-018f2c2aaaef",
    "metadata": {},
    "outputs": [],
    "source": []
