--- a/notebooks/rust.ipynb
+++ b/notebooks/rust.ipynb
@@ -504,8 +504,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "f4e6927c-1213-43fd-9761-018f2c2aaaef",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-06T12:04:55.699093Z",
+     "iopub.status.busy": "2022-12-06T12:04:55.698963Z",
+     "iopub.status.idle": "2022-12-06T12:04:55.699018Z",
+     "shell.execute_reply": "2022-12-06T12:04:56.561487Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer 1: 1953, Answer 2: 2301\n"
+     ]
+    }
+   ],
+   "source": [
+    "// DAY06\n",
+    "fn get_unique_substring_pos(stream: &str, n: usize) -> usize {\n",
+    "    let mut counts: HashMap<char, usize> = HashMap::new();\n",
+    "    let chars: Vec<char> = stream.chars().collect();\n",
+    "    for (i, c) in chars.iter().enumerate() {\n",
+    "        *counts.entry(*c).or_insert(0) += 1;\n",
+    "        if i >= n {\n",
+    "            let cprev = chars[i - n];\n",
+    "            let cnt = counts[&cprev] - 1;\n",
+    "            if cnt == 0 {\n",
+    "                counts.remove(&cprev);\n",
+    "            } else {\n",
+    "                counts.insert(cprev, cnt);\n",
+    "            }\n",
+    "        }\n",
+    "        if counts.len() == n {\n",
+    "            return i + 1;\n",
+    "        }\n",
+    "    }\n",
+    "    chars.len()\n",
+    "}\n",
+    "\n",
+    "fn problem06() {  \n",
+    "    let stream = read_string(&data_file(6)).unwrap();\n",
+    "    let res1 = get_unique_substring_pos(&stream, 4);\n",
+    "    let res2 = get_unique_substring_pos(&stream, 14);\n",
+    "    println!(\"Answer 1: {}, Answer 2: {}\", res1, res2);\n",
+    "}\n",
+    "\n",
+    "problem06();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d677c99-a8cf-4306-8c05-94abb2621c0b",
    "metadata": {},
    "outputs": [],
    "source": []
