--- a/notebooks/python.ipynb
+++ b/notebooks/python.ipynb
@@ -284,8 +284,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "bebf4398-1de7-4f17-92ac-f853f3274095",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-06T11:51:29.842728Z",
+     "iopub.status.busy": "2022-12-06T11:51:29.842374Z",
+     "iopub.status.idle": "2022-12-06T11:51:29.851368Z",
+     "shell.execute_reply": "2022-12-06T11:51:29.850601Z",
+     "shell.execute_reply.started": "2022-12-06T11:51:29.842702Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer 1: 1953\n",
+      "Answer 2: 2301\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DAY06\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def get_unique_substring_pos(stream, n):\n",
+    "    counts = defaultdict(lambda: 0)\n",
+    "    for i, c in enumerate(stream):\n",
+    "        counts[c] += 1\n",
+    "        if i >= n:\n",
+    "            cprev = stream[i - n]\n",
+    "            cnt = counts[cprev] - 1\n",
+    "            if cnt == 0:\n",
+    "                del counts[cprev]\n",
+    "            else:\n",
+    "                counts[cprev] = cnt\n",
+    "        if len(counts) == n:\n",
+    "            return i + 1\n",
+    "    return len(stream)\n",
+    "\n",
+    "stream = open(\"../data/06.txt\").read()\n",
+    "\n",
+    "res1 = get_unique_substring_pos(stream, 4)\n",
+    "res2 = get_unique_substring_pos(stream, 14)\n",
+    "print(f'Answer 1: {res1}\\nAnswer 2: {res2}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fba22b88-293f-46b1-a983-45141e3dad21",
    "metadata": {},
    "outputs": [],
    "source": []
